--- a/.github/workflows/actions-feature.yml
+++ b/.github/workflows/actions-feature.yml
@@ -10,6 +10,8 @@ jobs:
 
   test:
     name: Unit Test
+    runs-on: ubuntu-18.04
+
     steps:
       - name: Maven Package
         run: make test
