--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Master
+name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -13,6 +13,8 @@ jobs:
 
   test:
     name: Unit Test
+    runs-on: ubuntu-18.04
+
     steps:
       - name: Maven Package
         run: make test
