--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,37 +23,7 @@ jobs:
 
   sonar:
     name: Test - SonarCloud Scan
-    runs-on: ubuntu-latest
-      steps:
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-         - name: Set up JDK 11
-         uses: actions/setup-java@v1
-         with:
-           java-version: 11
-         - name: Cache SonarCloud packages
-           uses: actions/cache@v1
-           with:
-             path: ~/.sonar/cache
-             key: ${{ runner.os }}-sonar
-             restore-keys: ${{ runner.os }}-sonar
-         - name: Cache Maven packages
-           uses: actions/cache@v1
-           with:
-             path: ~/.m2
-             key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-             restore-keys: ${{ runner.os }}-m2
-         - name: Build and analyze
-           env:
-             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-           run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-
-  artifact:
-    name: Publish - GitHub Packages
     runs-on: ubuntu-18.04
-    needs: [test, sonar]
 
     steps:
       - uses: actions/checkout@v1
@@ -61,27 +31,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
-      - name: Publish artifact on GitHub Packages
-        run: mvn -B clean deploy -DskipTests
+      - name: SonarCloud Scan
+        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  docker:
-    name: Publish - Docker Hub
+  make-test:
+    name: Test - Makefile
     runs-on: ubuntu-18.04
-    needs: [test, sonar]
-    env:
-      REPO: ${{ secrets.DOCKER_REPO }}
-
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11.0.4
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
-      - name: Build Docker image
-        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
-      - name: Publish Docker image
-        run: docker push $REPO
+      - name: Maven Package
+        run: make build
