--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           java-version: 11
       - name: Build project with Maven
-        run: mvn -B verify org.jacoco:jacoco-maven-plugin:prepare-agent verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: ./mvnw -B verify sonar:sonar -Dsonar.projectKey=lucascoelhosilva_sell-easy -Dsonar.organization=lucascoelhosilva -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
